[gd_scene load_steps=3 format=2]

[ext_resource path="res://Code/Operators.gd" type="Script" id=1]
[ext_resource path="res://Themes/Buttons.tres" type="Theme" id=2]

[node name="Operators" type="HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Left" type="VBoxContainer" parent="."]
margin_right = 60.0
margin_bottom = 316.0
rect_min_size = Vector2( 60, 60 )

[node name="HSeparator" type="HSeparator" parent="Left"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )

[node name="D" type="Button" parent="Left"]
margin_top = 64.0
margin_right = 60.0
margin_bottom = 124.0
rect_min_size = Vector2( 60, 60 )
theme = ExtResource( 2 )
text = "/"

[node name="*" type="Button" parent="Left"]
margin_top = 128.0
margin_right = 60.0
margin_bottom = 188.0
rect_min_size = Vector2( 60, 60 )
theme = ExtResource( 2 )
text = "*"

[node name="-" type="Button" parent="Left"]
margin_top = 192.0
margin_right = 60.0
margin_bottom = 252.0
rect_min_size = Vector2( 60, 60 )
theme = ExtResource( 2 )
text = "-"

[node name="+" type="Button" parent="Left"]
margin_top = 256.0
margin_right = 60.0
margin_bottom = 316.0
rect_min_size = Vector2( 60, 60 )
theme = ExtResource( 2 )
text = "+"

[node name="Right" type="VBoxContainer" parent="."]
margin_left = 64.0
margin_right = 124.0
margin_bottom = 316.0
rect_min_size = Vector2( 60, 60 )

[node name="HSeparator" type="HSeparator" parent="Right"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )

[node name="sqrt" type="Button" parent="Right"]
margin_top = 64.0
margin_right = 60.0
margin_bottom = 124.0
rect_min_size = Vector2( 60, 60 )
theme = ExtResource( 2 )
text = "sqrt"

[node name="percent" type="Button" parent="Right"]
margin_top = 128.0
margin_right = 60.0
margin_bottom = 188.0
rect_min_size = Vector2( 60, 60 )
theme = ExtResource( 2 )
text = "%"

[node name="=" type="Button" parent="Right"]
margin_top = 192.0
margin_right = 60.0
margin_bottom = 316.0
rect_min_size = Vector2( 60, 124 )
theme = ExtResource( 2 )
text = "="
[connection signal="pressed" from="Left/D" to="." method="_on_Division_pressed"]
[connection signal="pressed" from="Left/*" to="." method="_on_Multi_pressed"]
[connection signal="pressed" from="Left/-" to="." method="_on_Sub_pressed"]
[connection signal="pressed" from="Left/+" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="Right/sqrt" to="." method="_on_sqrt_pressed"]
[connection signal="pressed" from="Right/percent" to="." method="_on_percent_pressed"]
[connection signal="pressed" from="Right/=" to="." method="_on_result_pressed"]
